feat: soft delete club
